Atualização de tradução

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 		 </header>
 
         <div class="lista-cadastro">
-			<input type="text" placeholder="Digite o nome do produto" name="nome_produto" />
+			<input translate="no" type="text" placeholder="Digite o nome do produto" name="nome_produto" />
 
-            <input type="number" placeholder="Digite o preço do produto" name="price" step="0.01" title="This should be a number with up to 2 decimal places.">
+            <input translate="no" type="number" placeholder="Digite o preço do produto" name="price" step="0.01" title="This should be a number with up to 2 decimal places.">
 
-			<input type="submit" name="acao" value="Cadastrar" />
+			<input translate="no" type="submit" name="acao" value="Cadastrar" />
         </div>
 
         <div class="lista-produtos">
@@ -27,10 +27,10 @@
         </div>
 
         <div class="soma-produto">
-            <h1>Total: R$0</h1>
+            <h1 translate="no">Total: R$0</h1>
         </div>
 
-        <button class="limpar" name="limpar">Limpar</button>
+        <button translate="no" class="limpar" name="limpar">Limpar</button>
 
         <script src="./js/supermercado.js"></script>
 
