Atualização para não traduzir a página

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
 		<meta name="author" content="Luana Rodrigues">
         <meta name="description" content="Projeto de treino em sua versão 2.0">
-		<title>Lista de supermercado</title>
+		<title translate="no">Lista de supermercado</title>
 	</head>
 	<body>
 
 		 <header>
-		 	<h2 class="h2">Lista de Supermercado</h2>
+		 	<h2 translate="no" class="h2">Lista de Supermercado</h2>
 		 </header>
 
         <div class="lista-cadastro">
