Atualização de tradução da página

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 
-		 <header>
+		 <header translate="no">
 		 	<h2 translate="no" class="h2">Lista de Supermercado</h2>
 		 </header>
 
